# rust_sandbox

./: .gitignore  CARGO.md  Cargo.toml  README.md
benches/: my_benchmark.rs
docs/: COUNT_WORDS.md  buffer.md  count_words.md  project.md
fixtures/: complex.json  person.json
src/: lib.rs  main.rs  my_enums.rs  my_errors.rs  my_functions.rs  my_io.rs  my_iterators.rs  my_json.rs  my_own_iterators.rs  my_rayon.rs  my_regex.rs  my_structs.rs
