[package]
name = "rust_sandbox"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4.3", features = ["derive"] }
rayon = "1.8.0"
regex = "1.9.5"
reqwest = { version = "0.11", features = ["blocking"] }

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "my_benchmark"
harness = false
